--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,9 +33,9 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          driver: cloud
-          endpoint: ${{ env.DBC_BUILDER_NAME }}
+        # with:
+        #   driver: cloud
+        #   endpoint: ${{ env.DBC_BUILDER_NAME }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
