--- a/compose-prod.yaml
+++ b/compose-prod.yaml
@@ -1,6 +1,6 @@
 services:
   app:
-    image: michaelirwin244/ai-game
+    image: dockersamples/ai-builder-game:latest
     pull_policy: always
     ports:
       - 3000:3000
